# svi

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: demo_density.py  demo_sgd.py  demo_svi.py  demo_svi_2d.py
src/svi/: module.py
src/svi/algorithms/: base.py  svgd.py
src/svi/kernels/: base.py  rbf.py
tests/svi/: test_kernels.py  test_module.py  test_module_extended.py  test_svgd.py
