[tool.poetry]
name = "svi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "svi", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
pytorch-lightning = "^2.3.3"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
