[project]
name = "svi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "pytorch-lightning>=2.6.0",
    "torch>=2.4.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/svi"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
]
